// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object-property.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a = {
  [this.resource = resource]: 1,
}

=====================================output=====================================
a = {
  [(this.resource = resource)]: 1,
};

================================================================================
`;

exports[`object-value.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a = {
  resource: (this.resource = resource),
}

map(([resource]) => ({
  resource: (this.resource = resource),
}))

=====================================output=====================================
a = {
  resource: (this.resource = resource),
};

map(([resource]) => ({
  resource: (this.resource = resource),
}));

================================================================================
`;
